<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/menu_remind" />
        <item
            android:id="@+id/nav_navigation"
            android:icon="@drawable/ic_navigation_black_24dp"
            android:title="@string/menu_navigation" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_za_lupoi"
            android:title="@string/menu_qr" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
